# beneat-sol

./: .gitignore  LICENSE  README.md
app/: .env.example  .env.local.demo  eslint.config.mjs  next.config.ts  package-lock.json  package.json  vitest.config.ts
app/anchor/: Anchor.toml  Cargo.toml
app/anchor/programs/ghost-bridge/: Cargo.toml
app/anchor/programs/ghost-bridge/src/: constants.rs  drift_cpi.rs  errors.rs  lib.rs
app/anchor/programs/ghost-bridge/src/instructions/: authorize_executor.rs  cancel_encrypted_order.rs  check_price_update.rs  close_encrypted_order.rs  consume_and_execute.rs  create_compressed_order.rs  create_encrypted_order.rs  delegate_encrypted_order.rs  delegate_executor.rs  init_executor.rs  mod.rs  schedule_encrypted_monitoring.rs  trigger_and_execute.rs  undelegate_executor.rs
app/anchor/programs/ghost-bridge/src/state/: compressed_order.rs  encrypted_order.rs  executor_authority.rs  mod.rs
app/anchor/programs/ghost-bridge/src/tests/: mod.rs  privacy_audit.rs
app/anchor/programs/ghost-crank/: Cargo.toml
app/anchor/programs/ghost-crank/src/: lib.rs
app/anchor/programs/ghost-crank/src/instructions/: cancel_order.rs  check_trigger.rs  create_ghost_order.rs  delegate_order.rs  execute_trigger.rs  execute_with_commitment.rs  mark_ready.rs  mod.rs  schedule_monitoring.rs
app/anchor/programs/ghost-crank/src/state/: ghost_order.rs  mod.rs
app/app/: globals.css  layout.tsx  page.tsx  polyfills.ts
docs/: README.md
docs/development/: build-and-deploy.md  environment-variables.md  frontend-integration.md  index.md  prerequisites.md  (+3 more)
(+207 files in other folders)
