[package]
name = "ghost-bridge"
version = "0.1.0"
description = "Privacy bridge combining Light Protocol ZK-compression with MagicBlock TEE execution for hidden ghost orders"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ghost_bridge"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
ephemeral-rollups-sdk = { version = "=0.6.5", features = ["anchor", "disable-realloc"] }
magicblock-magic-program-api = "0.6"
blake3.workspace = true
bincode = "^1.3"

[dev-dependencies]
